deploy/k8s/services/wearables/test-eu/http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wearables-http
spec:
  replicas: 2
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
      containers:
        - name: wearables
          image: wearables
          imagePullPolicy: Always
